--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="https://th.bing.com/th/id/OIP.5aKhA8rhSGnJzNnkGJgtLwHaLH?rs=1&pid=ImgDetMain" alt="" srcset="">
     </h1>
     <h2>
-        <a href="https://th.bing.com/th/id/OIP.5aKhA8rhSGnJzNnkGJgtLwHaLH?rs=1&pid=ImgDetMain">รีบดูก่อนโดนลบ</a>
+        <a href="https://th.bing.com/th/id/OIP.5aKhA8rhSGnJzNnkGJgtLwHaLH?rs=1&pid=ImgDetMain">ไม่โดนไรหรอก กดเลย</a>
     </h2>
     <h3>
         <table>
